--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,10 @@
             <artifactId>nimbus-jose-jwt</artifactId>
             <version>9.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
