--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=doctor_service
 spring.datasource.username= sa
-spring.datasource.password= sa
+spring.datasource.password= 123456
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.driverClassName= com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port = 9002
