--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,23 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
+
+resilience4j:
+  retry:
+    instances:
+      basic:
+        maxRetryAttemps: 5
+        waitDuration: 3s
+
+  ratelimiter:
+    instances:
+      basicExample:
+        limitForPeriod: 5
+        limitRefreshPeriod: 4s
+        timeoutDuration: 4s
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
