--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,9 @@
-# suppress inspection "UnusedProperty"
-spring.datasource.url=jdbc:mysql://localhost:3306/dbdoctor
-spring.datasource.username = root
+spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=subprojectKT
+spring.datasource.username= sa
 spring.datasource.password= 123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
-spring.jpa.properties.hibernate.id.new_generator_mappings=true
-spring.jpa.hibernate.ddl-auto=update
-server.port = 9002
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.driverClassName= com.microsoft.sqlserver.jdbc.SQLServerDriver
+server.port=9002
 
 spring.application.name=DOCTOR-SERVICE
 
