--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.datasource.username= sa
 spring.datasource.password= 123456
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.driverClassName= com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-
 server.port=9002
+spring.application.name=DOCTOR-SERVICE
 
 
