--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=subprojectKT
-spring.datasource.username= sa
-spring.datasource.password= 123456
+spring.datasource.url = jdbc:sqlserver://database-subproject-kientruc.cvvexjocq3wu.ap-southeast-1.rds.amazonaws.com:1433;databaseName=subprojectKT
+spring.datasource.username= admin
+spring.datasource.password= 1a2b3c4D
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.driverClassName= com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port=9002
